--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 ﻿{
-  "name": "Pacman Canvas",
-  "short_name": "Pacman Canvas",
+  "name": "Steem Pacman",
+  "short_name": "Steem Pacman",
   "description": "An old classic, rewritten in HTML5",
   "version": "0.91",
   "lang": "en-US",
@@ -19,10 +19,10 @@
 
   "app": {
     "urls": [
-      "http://pacman.platzh1rsch.ch/"
+      "https://pacman.steemliberator.com/"
     ],
     "launch": {
-      "web_url": "http://pacman.platzh1rsch.ch"
+      "web_url": "https://pacman.steemliberator.com"
     }
 	
 	},
